testsuite/tests/polykinds/T9017.stderr

T9017.hs:8:7: error:
    • Couldn't match kind ‘k1’ with ‘*’
      ‘k1’ is a rigid type variable bound by
        the type signature for:
          foo :: forall k k1 (a :: k1 -> k -> *) (b :: k1) (m :: k1 -> k).
                 a b (m b)
        at T9017.hs:7:8
      When matching the kind of ‘a’
    • In the expression: arr return
      In an equation for ‘foo’: foo = arr return
    • Relevant bindings include
        foo :: a b (m b) (bound at T9017.hs:8:1)
